Fix conformance upload issue:
We're trying to upload conformance test results from a hidden directory:

Version 4.4.0 introduced a breaking change:
https://github.com/actions/upload-artifact/releases/tag/v4.4.0

We can either set include-hidden-files: true or
ename the directory to e.g., out/ without a leading dot which is what
we do in this PR

Signed-off-by: Milos Gajdos <milosthegajdos@gmail.com>

--- a/.github/workflows/conformance.yml
+++ b/.github/workflows/conformance.yml
@@ -46,11 +46,11 @@ jobs:
           OCI_HIDE_SKIPPED_WORKFLOWS: 1
       -
         name: Move test results
-        run: mkdir -p .out/ && mv {report.html,junit.xml} .out/
+        run: mkdir -p out/ && mv {report.html,junit.xml} out/
       -
         name: Upload test results
         uses: actions/upload-artifact@v4.5.0
         with:
           name: oci-test-results-${{ github.sha }}
-          path: .out/
+          path: out/
           if-no-files-found: error
