add redis sentinel patch
Signed-off-by: wang yan <wangyan@vmware.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
 
 env:
-  DOCKERHUB_SLUG: distribution/distribution
+  DOCKERHUB_SLUG: goharbor/distribution
 
 jobs:
   build:
