--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           - 1.23.6
         target:
           - test-coverage
-          - test-cloud-storage # TODO: rename to test-s3-storage
+          - test-s3-storage
           - test-azure-storage
     steps:
       -
