chore: labeler: add area/client mapping for internal/client/**
Signed-off-by: Artem Tkachuk <artemtkachuk@yahoo.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -53,6 +53,10 @@ area/storage/s3:
   - changed-files:
     - any-glob-to-any-file:
       - registry/storage/driver/s3-aws/**
+area/client:
+  - changed-files:
+    - any-glob-to-any-file:
+      - internal/client/**
 dependencies:
   - changed-files:
     - any-glob-to-any-file:
