Expose `useFIPSEndpoint` for S3
Signed-off-by: Raghav Mahajan <rmahajan@palantir.com>

--- a/tests/conf-local-s3.yml
+++ b/tests/conf-local-s3.yml
@@ -34,5 +34,5 @@ storage:
     encrypt: false
     secure: false
     chunksize: 33554432
-    secure: true
     v4auth: true
+    usefipsendpoint: false
