fix(ci): Fix broken Azure e2e storage tests
We were asking for it by not pinning our compose images to specific tags
and Azure team delivered: latest azure-cli broke our azure store e2e
tests.

This pins the images to specific tags and adds --wait flag for waiting
the compose to fully start.

Signed-off-by: Milos Gajdos <milosthegajdos@gmail.com>

--- a/tests/docker-compose-azure-blob-store.yaml
+++ b/tests/docker-compose-azure-blob-store.yaml
@@ -14,7 +14,7 @@ services:
       "
 
   azurite:
-    image: mcr.microsoft.com/azure-storage/azurite
+    image: mcr.microsoft.com/azure-storage/azurite:3.35.0
     ports:
       - "10000:10000"
     volumes:
@@ -45,7 +45,7 @@ services:
       retries: 10
 
   azurite-init:
-    image: mcr.microsoft.com/azure-cli
+    image: mcr.microsoft.com/azure-cli:2.70.0
     depends_on:
       azurite:
         condition: service_healthy
