--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,27 +1,32 @@
-linters:
+version: "2"
+
+formatters:
   enable:
-    - staticcheck
-    - unconvert
     - gofmt
     - goimports
-    - revive
-    - ineffassign
-    - govet
-    - unused
-    - misspell
+
+linters:
+  enable:
     - bodyclose
+    - misspell
     - prealloc
-    - errcheck
+    - revive
+    - staticcheck
     - tparallel
+    - unconvert
 
-linters-settings:
-  revive:
-    rules:
-      # TODO(thaJeztah): temporarily disabled the "unused-parameter" check.
-      # It produces many warnings, and some of those may need to be looked at.
-      - name: unused-parameter
-        disabled: true
+  disable:
+    - errcheck
 
-issues:
-  exclude-dirs:
-    - vendor
+  settings:
+    revive:
+      rules:
+        # TODO(thaJeztah): temporarily disabled the "unused-parameter" check.
+        # It produces many warnings, and some of those may need to be looked at.
+        - name: unused-parameter
+          disabled: true
+    staticcheck:
+      checks:
+        - all
+        - -QF1008 # Omit embedded fields from selector expression; https://staticcheck.dev/docs/checks/#QF1008
+        - -ST1000 # Incorrect or missing package comment; https://staticcheck.dev/docs/checks/#ST1000
